--- a/index.html
+++ b/index.html
@@ -3,9 +3,56 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="author" content="Paola Miramontes">
+    <link rel="stylesheet" href="styles.css"/>
     <title>Sprint 1.1</title>
 </head>
 <body>
-    
+    <div class="seccion1">
+        <div class="container">
+            <header>
+                <div class="logo"><p>Logo</p></div>
+                <nav class="nav">
+                    <ul>
+                        <li><a href="#">Inicio</a></li>
+                    </ul>
+                </nav>
+                <div class="social">
+                    <a href="http://www.instagram.com">Instagram</a>
+                </div>
+            </header>
+            <div class="banner">Banner</div>
+        </div>
+    </div>
+
+      <div class="seccion2">
+        <main class="main">
+          <section class="articles">
+            <article class="article">
+              <p>articulo</p>
+            </article>
+            <article class="article">
+              <p>articulo</p>
+            </article>
+            <article class="article">
+              <p>articulo</p>
+            </article>
+            <article class="article">
+              <p>articulo</p>
+            </article>
+            <div class="navegacion">Navegación Secundaria</div>
+          </section>
+
+          <aside class="publicidad">
+            <div class="ad">Publicidad 1</div>
+            <div class="ad">Publicidad 2</div>
+          </aside>
+        </main>
+      </div>
+
+      <div class="seccion3">
+        <footer class="pie"><p>© footer</p></footer>
+      </div>
+    </div>
 </body>
 </html>
